# private_summarizer

./: .gitignore  CONTRIBUTING.md  README.md  backend.py  pyproject.toml  setup.sh  summarizer.html
