[project]
name = "private-summarizer"
version = "1.0.0"
description = "A private AI text summarization tool"
readme = "README.md"
requires-python = ">=3.9"

dependencies = [
    "flask>=3.0.0",
    "flask-cors>=4.0.0",
    "transformers>=4.40.0",
    "torch>=2.0.0",
    "accelerate>=0.27.0",
    "sentencepiece>=0.1.99",
]

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "ruff>=0.1.0",
]
